--- a/sections/cta/cta.html
+++ b/sections/cta/cta.html
@@ -82,7 +82,7 @@
 }
 </style>
 
-<section class="cta-section">
+<section class="cta-section" id="pricing">
   <div class="cta-content">
     <h2 class="cta-title">Ready to create amazing videos?</h2>
     <p class="cta-subtitle">
