--- a/sections/features/features.html
+++ b/sections/features/features.html
@@ -107,7 +107,7 @@
 }
 </style>
 
-<section class="features-section">
+<section class="features-section" id="features">
   <div class="section-header-center">
     <h2 class="section-title-large" data-animate>Powerful Features for Creators</h2>
     <p class="section-subtitle-large" data-animate>
