--- a/sections/stats/stats.html
+++ b/sections/stats/stats.html
@@ -60,7 +60,7 @@
 }
 </style>
 
-<section class="stats-section">
+<section class="stats-section" id="resources">
   <div class="stats-grid">
     <div class="stat-item">
       <div class="stat-number">10M+</div>
