--- a/sections/gallery/gallery.html
+++ b/sections/gallery/gallery.html
@@ -122,7 +122,7 @@
 }
 </style>
 
-<section class="gallery-section">
+<section class="gallery-section" id="solutions">
   <div class="section-header">
     <h2 class="section-title">Explore Creative Possibilities</h2>
   </div>
