--- a/sections/navigation/navigation.html
+++ b/sections/navigation/navigation.html
@@ -7,15 +7,17 @@
   left: 0;
   width: 100%;
   height: var(--nav-height);
-  background: transparent; /* 完全透明，不遮挡背景 */
-  border-bottom: none; /* 去除边框线 */
+  background: transparent; /* 默认完全透明 */
+  border-bottom: none;
   z-index: 1000;
-  transition: all var(--transition);
+  transition: background 0.3s ease, backdrop-filter 0.3s ease, box-shadow 0.3s ease;
 }
 
-.navbar.scrolled {
-  background: rgba(13, 13, 13, 0.95); /* 滚动后添加背景 */
-  backdrop-filter: blur(10px); /* 滚动后才添加毛玻璃效果 */
+/* 滚动中或鼠标悬浮时显示背景 */
+.navbar.scrolling,
+.navbar.hovered {
+  background: rgba(13, 13, 13, 0.95);
+  backdrop-filter: blur(10px);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -43,18 +45,71 @@
 
 .nav-menu {
   display: flex;
-  gap: 4rem; /* 菜单项之间的间距加大 */
+  gap: 2.5rem; /* 菜单项之间的间距加大 */
 }
 
 .nav-menu a {
   font-size: 14px;
   font-weight: 500;
   color: var(--color-text-secondary);
-  transition: color var(--transition);
+  transition: color var(--transition); /* 只过渡颜色 */
+  position: relative;
+  /* 使用 text-shadow 模拟加粗效果，避免宽度变化 */
 }
 
 .nav-menu a:hover {
   color: var(--color-text);
+}
+
+/* 当前激活的导航项样式 - 使用 text-shadow 模拟加粗 */
+.nav-menu a.active {
+  color: var(--color-text);
+  text-shadow: 0.5px 0 0 currentColor, -0.5px 0 0 currentColor; /* 模拟加粗，不改变宽度 */
+}
+
+/* 特殊按钮样式的菜单项 */
+.nav-menu a.btn-style {
+  padding: 0.5rem 1rem;
+  position: relative;
+  background: rgba(128, 128, 128, 0.15); /* 灰色半透明背景 */
+  border: 1px solid rgba(128, 128, 128, 0.25);
+  border-radius: 6px;
+  color: var(--color-text);
+  font-weight: 500;
+  backdrop-filter: blur(10px); /* 毛玻璃效果 */
+  -webkit-backdrop-filter: blur(10px); /* Safari 兼容 */
+  transition: background 0.3s ease, border-color 0.3s ease, transform 0.3s ease; /* 只过渡必要属性 */
+  overflow: hidden; /* 确保背景图片不溢出 */
+  isolation: isolate; /* 创建独立的层叠上下文，避免重绘问题 */
+}
+
+/* 月亮背景图片层 */
+.nav-menu a.btn-style::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url('sections/navigation/moon.jpg');
+  background-size: cover;
+  background-position: center;
+  opacity: 0.5; 
+  z-index: -1; 
+  transition: opacity 0.3s ease; /* 明确指定过渡属性 */
+  will-change: opacity; /* 提示浏览器优化此属性 */
+}
+
+.nav-menu a.btn-style:hover::before {
+  opacity: 0.6; /* 悬浮时图片更亮 */
+}
+
+.nav-menu a.btn-style:hover {
+  background: rgba(128, 128, 128, 0.25); /* 悬浮时更亮一些 */
+  border-color: rgba(128, 128, 128, 0.4);
+  backdrop-filter: blur(12px);
+  -webkit-backdrop-filter: blur(12px);
+  transform: translateY(-1px);
 }
 
 .nav-actions {
@@ -167,7 +222,7 @@
         <li><a href="#solutions">Solutions</a></li>
         <li><a href="#resources">Resources</a></li>
         <li><a href="#pricing">Pricing</a></li>
-        <li><a href="#ai-studio">AI Studio</a></li>
+        <li><a href="#ai-studio" class="btn-style">Eclipse Engine</a></li>
       </ul>
     </div>
 
@@ -214,20 +269,100 @@
     });
   };
 
-  // Navbar scroll effect
+  // Navbar scroll effect - 滚动时不透明，停止时立即透明
   const initNavbarScroll = () => {
     const navbar = document.querySelector('.navbar');
     if (!navbar) return;
 
-    const handleScroll = throttle(() => {
-      if (window.scrollY > 100) {
-        navbar.classList.add('scrolled');
-      } else {
-        navbar.classList.remove('scrolled');
+    let scrollTimeout;
+    let lastScrollY = window.scrollY;
+    let ticking = false;
+
+    const handleScroll = () => {
+      lastScrollY = window.scrollY;
+
+      if (!ticking) {
+        window.requestAnimationFrame(() => {
+          // 滚动时添加 scrolling 类
+          navbar.classList.add('scrolling');
+
+          // 清除之前的定时器
+          clearTimeout(scrollTimeout);
+
+          // 滚动停止后立即移除 scrolling 类
+          scrollTimeout = setTimeout(() => {
+            navbar.classList.remove('scrolling');
+          }, 100); // 100ms 后认为停止滚动，避免过于敏感
+
+          ticking = false;
+        });
+
+        ticking = true;
+      }
+    };
+
+    window.addEventListener('scroll', handleScroll, { passive: true });
+
+    // 鼠标悬浮导航栏时显示背景
+    navbar.addEventListener('mouseenter', () => {
+      navbar.classList.add('hovered');
+    });
+
+    navbar.addEventListener('mouseleave', () => {
+      navbar.classList.remove('hovered');
+    });
+  };
+
+  // 当前页面高亮功能
+  const initActiveSection = () => {
+    const navLinks = document.querySelectorAll('.nav-menu a');
+    if (navLinks.length === 0) return;
+
+    const updateActiveLink = throttle(() => {
+      let currentSection = null;
+      let minDistance = Infinity;
+      const scrollPosition = window.scrollY + window.innerHeight / 3; // 使用视口的 1/3 位置作为触发点
+
+      // 遍历所有导航链接，找到对应的区块
+      navLinks.forEach(link => {
+        const href = link.getAttribute('href');
+        if (!href || !href.startsWith('#')) return;
+
+        const sectionId = href.substring(1);
+        const section = document.getElementById(sectionId) ||
+                       document.querySelector(`.${sectionId}`) ||
+                       document.querySelector(`[class*="${sectionId}"]`);
+
+        if (section) {
+          const sectionTop = section.offsetTop;
+          const distance = Math.abs(scrollPosition - sectionTop);
+
+          // 找到距离当前滚动位置最近的区块
+          if (distance < minDistance && scrollPosition >= sectionTop - 100) {
+            minDistance = distance;
+            currentSection = href;
+          }
+        }
+      });
+
+      // 更新导航链接的 active 状态
+      navLinks.forEach(link => {
+        const href = link.getAttribute('href');
+        if (href === currentSection) {
+          link.classList.add('active');
+        } else {
+          link.classList.remove('active');
+        }
+      });
+
+      // 如果滚动到页面顶部，清除所有高亮
+      if (window.scrollY < 100) {
+        navLinks.forEach(link => link.classList.remove('active'));
       }
     }, 100);
 
-    window.addEventListener('scroll', handleScroll);
+    window.addEventListener('scroll', updateActiveLink);
+    updateActiveLink(); // 初始化时执行一次
   };
 
   // Initialize on DOM ready
@@ -235,10 +370,12 @@
     document.addEventListener('DOMContentLoaded', () => {
       initMobileMenu();
       initNavbarScroll();
+      initActiveSection();
     });
   } else {
     initMobileMenu();
     initNavbarScroll();
+    initActiveSection();
   }
 })();
 </script>
