--- a/sections/assistant/assistant.html
+++ b/sections/assistant/assistant.html
@@ -71,7 +71,7 @@
 /* 卡片基础样式 */
 .assistant-card {
   background: var(--color-bg-secondary);
-  border: 1px solid var(--color-border);
+  border: none;  /* 移除边框 */
   border-radius: 24px;  /* 增大圆角 */
   overflow: hidden;
   transition: all var(--transition);
@@ -81,7 +81,6 @@
 
 .assistant-card:hover {
   transform: translateY(-4px);
-  border-color: rgba(255, 255, 255, 0.2);
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
 }
 
