--- a/sections/styles/styles.html
+++ b/sections/styles/styles.html
@@ -44,13 +44,12 @@
   overflow: hidden;
   background-color: var(--color-bg-secondary);
   transition: all 0.4s ease;
-  opacity: 0;
+  opacity: 0;  /* 初始透明 */
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+  will-change: opacity, transform;  /* 优化动画性能 */
 }
 
-.styles-card.animate-in {
-  animation: fadeInUp 0.6s ease forwards;
-}
+/* 每个卡片的动画在下方单独定义 */
 
 /* 灵活交错布局（6列网格）：
    使用 grid-column/grid-row 定位基础位置
@@ -61,72 +60,124 @@
 .styles-card:nth-child(1) {
   grid-column: 3 / 5;
   grid-row: 1;
-  animation-delay: 0s;
   width: 235px;
   height: 195px;
-  transform: translate(-325px, 170px);  /* 向上移动20px（220 - 20 = 200）*/
+  transform: translate(-325px, 170px);
+}
+
+.styles-card:nth-child(1).animate-in {
+  animation: fadeInUp1 0.8s ease forwards;
+  animation-delay: 0s;
+}
+
+@keyframes fadeInUp1 {
+  0% {
+    opacity: 0;
+    transform: translate(-325px, 240px);  /* 从下方70px开始 (170 + 70) */
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-325px, 170px);  /* 最终位置 */
+  }
 }
 
 /* 卡片 2：右上角，与卡片1并排 */
 .styles-card:nth-child(2) {
   grid-column: 5 / 7;
   grid-row: 1;
-  animation-delay: 0.1s;
   width: 235px;
   height: 195px;
-  transform: translate(-380px, 170px);  /* 向上移动20px（220 - 20 = 200）*/
+  transform: translate(-380px, 170px);
+}
+
+.styles-card:nth-child(2).animate-in {
+  animation: fadeInUp2 0.8s ease forwards;
+  animation-delay: 0.15s;
+}
+
+@keyframes fadeInUp2 {
+  0% { opacity: 0; transform: translate(-380px, 240px); }  /* 170 + 70 */
+  100% { opacity: 1; transform: translate(-380px, 170px); }
 }
 
 /* 卡片 3：左侧中间 */
 .styles-card:nth-child(3) {
   grid-column: 1 / 3;
   grid-row: 2;
-  animation-delay: 0.2s;
-  width: 220px;   /* 宽度 */
-  height: 290px;  /* 高度 */
-  transform: translate(-335px, 70px);  
+  width: 220px;
+  height: 290px;
+  transform: translate(-335px, 70px);
+}
+
+.styles-card:nth-child(3).animate-in {
+  animation: fadeInUp3 0.8s ease forwards;
+  animation-delay: 0.3s;
+}
+
+@keyframes fadeInUp3 {
+  0% { opacity: 0; transform: translate(-335px, 140px); }  /* 70 + 70 */
+  100% { opacity: 1; transform: translate(-335px, 70px); }
 }
 
 /* 卡片 4：中间 */
 .styles-card:nth-child(4) {
   grid-column: 3 / 6;
   grid-row: 2;
-  animation-delay: 0.3s;
   width: 367px;
   height: 315px;
   z-index: 2;
-  transform: translate(-325px, 170px);  /* 向上移动20px（220 - 20 = 200）*/
+  transform: translate(-325px, 170px);
+}
+
+.styles-card:nth-child(4).animate-in {
+  animation: fadeInUp4 0.8s ease forwards;
+  animation-delay: 0.45s;
+}
+
+@keyframes fadeInUp4 {
+  0% { opacity: 0; transform: translate(-325px, 240px); }  /* 170 + 70 */
+  100% { opacity: 1; transform: translate(-325px, 170px); }
 }
 
 /* 卡片 5：右侧，跨2行，向右突出 */
 .styles-card:nth-child(5) {
   grid-column: 4 / 6;
   grid-row: 2 / 4;
-  animation-delay: 0.4s;
-  width: 240px;   /* 宽度 */
-  height: 395px;  /* 高度（较高）*/
+  width: 240px;
+  height: 395px;
   z-index: 3;
   transform: translate(-80px, 170px);
+}
+
+.styles-card:nth-child(5).animate-in {
+  animation: fadeInUp5 0.8s ease forwards;
+  animation-delay: 0.6s;
+}
+
+@keyframes fadeInUp5 {
+  0% { opacity: 0; transform: translate(-80px, 240px); }  /* 170 + 70 */
+  100% { opacity: 1; transform: translate(-80px, 170px); }
 }
 
 /* 卡片 6：底部中间 */
 .styles-card:nth-child(6) {
   grid-column: 3 / 5;
   grid-row: 3;
-  animation-delay: 0.5s;
-  width: 295px;   /* 宽度 */
-  height: 400px;  /* 高度 */
+  width: 295px;
+  height: 400px;
   transform: translate(-250px, 170px);
 }
 
-@keyframes fadeInUp {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+.styles-card:nth-child(6).animate-in {
+  animation: fadeInUp6 0.8s ease forwards;
+  animation-delay: 0.75s;
 }
+
+@keyframes fadeInUp6 {
+  0% { opacity: 0; transform: translate(-250px, 240px); }  /* 170 + 70 */
+  100% { opacity: 1; transform: translate(-250px, 170px); }
+}
+
 
 /* 悬浮效果：增加阴影和缩放，不影响位置偏移 */
 .styles-card:hover {
@@ -240,23 +291,25 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  padding: 17px 25px;  /* 从 16px 32px 减小到 14px 24px */
-  font-size: 1.02rem;
+  padding: 19px 17px;  /* 使用正常的内边距 */
+  font-size: 1.23rem;
   font-weight: 600;
-  letter-spacing: 0.01em;
+  letter-spacing: 0.01;
   text-transform: uppercase;
   color: var(--color-bg);
-  background-color: var(--color-text);
+  background-color: #E5E5E5;  /* 浅灰色背景，不那么白 */
   border: none;
-  border-radius: 8px;
+  border-radius: 10px;  /* 圆角从 8px 增大到 16px */
   cursor: pointer;
   transition: all var(--transition);
   text-decoration: none;
+  transform: scale(0.85);  /* 整体缩小到 85%，视觉上更窄 */
+  transform-origin: center;  /* 从中心缩放 */
 }
 
 .styles-button:hover {
   background-color: var(--color-text-secondary);
-  transform: translateY(-2px);
+  transform: scale(0.85) translateY(-2px);  /* 保持缩放效果 */
   box-shadow: 0 8px 16px rgba(255, 255, 255, 0.1);
 }
 
