--- a/index.html
+++ b/index.html
@@ -4292,8 +4292,7 @@
 }
 
 .apis-label {
-  font-size: 0.875rem;
-  text-transform: uppercase;
+  font-size: 1.25rem;
   letter-spacing: 0.1em;
   color: var(--color-text-secondary);
   margin-bottom: var(--spacing-sm);
@@ -4301,21 +4300,18 @@
 }
 
 .apis-title {
-  font-size: clamp(2.5rem, 5vw, 4rem);
+  font-size: 2.6rem;
   font-weight: 800;
   margin-bottom: var(--spacing-md);
   line-height: 1.1;
-  background: linear-gradient(135deg, #ffffff 0%, #a0a0a0 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
+  color: #ffffff;
 }
 
 .apis-description {
-  font-size: 1.125rem;
+  font-size: 1.45rem;
   color: var(--color-text-secondary);
   line-height: 1.6;
-  max-width: 700px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
