--- a/sections/APIs/APIs.html
+++ b/sections/APIs/APIs.html
@@ -2,7 +2,7 @@
 <style>
 /* APIs Section Styles */
 .apis-section {
-  padding: var(--spacing-3xl) 0;
+  padding: var(--spacing-3xl) 0 0 0; /* 顶部正常, 底部 0px */
   background: var(--color-bg);
 }
 
